--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -30,10 +30,18 @@
             android:layout_height="0dp"
             android:layout_weight="3"
             android:src="@drawable/img"
+            android:id="@+id/ivPic"
             >
             
         </ImageView>
-        
+
+
+        <ProgressBar
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1">
+
+        </ProgressBar>
 
 
     </LinearLayout>
