--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -24,6 +24,16 @@
             >
 
         </Button>
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="100dp"
+            android:text="Log In"
+            android:textSize="30dp"
+            android:background="@color/black"
+            android:id="@+id/login"
+            >
+
+        </Button>
 
     </LinearLayout>
 
