--- a/app/src/main/res/layout/activity_log_in.xml
+++ b/app/src/main/res/layout/activity_log_in.xml
@@ -85,7 +85,7 @@
                 android:background="@drawable/edit_text_background"
                 android:textColor="#000000"
                 android:textColorHint="#555555"
-                android:layout_marginBottom="24dp"/>
+                android:layout_marginBottom="16dp"/>
 
             <!-- Login Button -->
             <Button
@@ -95,21 +95,19 @@
                 android:text="Log In"
                 android:background="@drawable/button_background"
                 android:textColor="#222222"
-                android:elevation="8dp"/>
+                android:elevation="8dp"
+                android:layout_marginBottom="16dp"
+                />
 
             <!-- Register Text -->
-            <TextView
-                android:id="@+id/tvRegister"
+            <Button
+                android:id="@+id/btnMove"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="60dp"
                 android:text="Don't have an account? Register"
-                android:textColor="#FFFFFF"
-                android:textSize="16sp"
-                android:gravity="center"
-                android:layout_marginTop="16dp"/>
+                android:background="@drawable/button_background"
+                android:textColor="#222222"
+                android:elevation="8dp"/>
         </LinearLayout>
     </FrameLayout>
-
-
-
 </androidx.constraintlayout.widget.ConstraintLayout>
