--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -8,100 +8,146 @@
     tools:context=".Register">
 
 
-    <LinearLayout
+    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:weightSum="9"
-        >
+        android:background="#000000">
 
-        <TextView
+        <!-- Background image with 50% opacity -->
+        <ImageView
+            android:id="@+id/bgImage"
             android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1"
-            android:text="Register"
-            android:textSize="50dp"
+            android:layout_height="match_parent"
+            android:src="@drawable/piano2"
+            android:scaleType="centerCrop"
+            android:alpha="0.5" />
+
+        <!-- Gradient overlay -->
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:src="@drawable/gradient_overlay"
+            android:scaleType="fitXY" />
+
+        <!-- Glass-morphism card -->
+        <LinearLayout
+            android:id="@+id/glassCard"
+            android:layout_width="match_parent"
+            android:layout_height="650dp"
+            android:layout_margin="24dp"
+            android:orientation="vertical"
             android:gravity="center"
-            android:textColor="#00399E"
-            android:textStyle="bold"
-            android:background="#00D0FF"
-            >
-
-        </TextView>
-
-        <EditText
-            android:id="@+id/etFname"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1"
-            android:ems="10"
-            android:inputType="text"
-            android:hint="First Name" />
-
-        <EditText
-            android:id="@+id/etLname"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1"
-            android:ems="10"
-            android:inputType="text"
-            android:hint="Last Name" />
-
-        <EditText
-            android:id="@+id/etEmail"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1"
-            android:ems="10"
-            android:hint="Email"
-            android:inputType="textEmailAddress" />
-
-        <EditText
-            android:id="@+id/etPhone"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1"
-            android:ems="10"
-            android:hint="Phone"
-            android:inputType="phone" />
+            android:background="@drawable/glass_card"
+            android:padding="24dp"
+            android:layout_gravity="center">
 
 
-        <EditText
-            android:id="@+id/etPassword"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1"
-            android:ems="10"
-            android:hint="Password"
-            android:inputType="textPassword" />
-
-        <Button
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1"
-            android:text="Submit"
-            android:textSize="30dp"
-            android:background="@color/black"
-            android:id="@+id/btnSubmit"
-            >
-
-        </Button>
+            <TextView
+                android:id="@+id/textView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Register"
+                android:textSize="36sp"
+                android:textStyle="bold"
+                android:textColor="#FFFFFF"
+                android:shadowColor="#B0FFFFFF"
+                android:shadowDx="0"
+                android:shadowDy="0"
+                android:shadowRadius="14"
+                android:gravity="center"
+                android:layout_margin="16dp"
+                />
 
 
-        <Button
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1"
-            android:background="@color/black"
-            android:text="Move to second activity"
-            android:textSize="30dp"
-            android:id="@+id/Move"
+            <EditText
+                android:id="@+id/etFname"
+                android:layout_width="match_parent"
+                android:layout_height="60dp"
+                android:hint="First Name"
+                android:inputType="text"
+                android:padding="16dp"
+                android:background="@drawable/edit_text_background"
+                android:textColor="#000000"
+                android:textColorHint="#555555"
+                android:layout_marginBottom="16dp"/>
 
-            >
 
-        </Button>
+            <EditText
+                android:id="@+id/etLname"
+                android:layout_width="match_parent"
+                android:layout_height="60dp"
+                android:hint="Last Name"
+                android:inputType="text"
+                android:padding="16dp"
+                android:background="@drawable/edit_text_background"
+                android:textColor="#000000"
+                android:textColorHint="#555555"
+                android:layout_marginBottom="16dp" />
+
+            <EditText
+                android:id="@+id/etEmail"
+                android:layout_width="match_parent"
+                android:layout_height="60dp"
+                android:hint="Email"
+                android:inputType="textEmailAddress"
+                android:padding="16dp"
+                android:background="@drawable/edit_text_background"
+                android:textColor="#000000"
+                android:textColorHint="#555555"
+                android:layout_marginBottom="16dp" />
+
+            <EditText
+                android:id="@+id/etPhone"
+                android:layout_width="match_parent"
+                android:layout_height="60dp"
+                android:hint="Phone"
+                android:inputType="number"
+                android:padding="16dp"
+                android:background="@drawable/edit_text_background"
+                android:textColor="#000000"
+                android:textColorHint="#555555"
+                android:layout_marginBottom="16dp" />
 
 
-    </LinearLayout>
+            <EditText
+                android:id="@+id/etPassword"
+                android:layout_width="match_parent"
+                android:layout_height="60dp"
+                android:hint="Password"
+                android:inputType="textPassword"
+                android:padding="16dp"
+                android:background="@drawable/edit_text_background"
+                android:textColor="#000000"
+                android:textColorHint="#555555"
+                android:layout_marginBottom="16dp"/>
+
+            <Button
+                android:background="@drawable/button_background"
+                android:layout_width="match_parent"
+                android:layout_height="60dp"
+                android:text="Register"
+                android:textSize="20dp"
+                android:textColor="#222222"
+                android:elevation="8dp"
+                android:id="@+id/btnSubmit"
+                android:layout_marginBottom="16dp"
+                >
+
+            </Button>
+
+
+            <Button
+                android:background="@drawable/button_background"
+                android:layout_width="match_parent"
+                android:layout_height="60dp"
+                android:text="Move to second activity"
+                android:textColor="#222222"
+                android:textSize="20dp"
+                android:id="@+id/Move"
+                >
+
+            </Button>
+        </LinearLayout>
+    </FrameLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
